# quizlet-generation

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: prompts.py  settings.py
services/: csv_handler.py  gemini_handler.py  sheets_handler.py
utils/: validators.py
